tests/negative/semantic/try_no_catch_no_finally/input.ci
void main() {
    try {
        print("hello\n");
    }
}
